# astroAPIServer

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  config.yml  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
astroapiserver/: __init__.py  api.py  app.py  authentication.py  globals.py
docs/: INFO.md
templates/: home.html
test/: auth.py  boilerplate.py  database_handler.py  serve.py  serve_api.py  serve_test.py
test/data/: planets.db  planets.sql
test/static/: admin.css  admin.js  openapi.yaml  swagger.yaml
test/templates/: admin.html  base.html  csrf.html  home.html  login.html  redoc.html  test.html
