[tool.poetry]
name = "astroapiserver"
version = "2020.1b4"
description = ""
authors = ["Keto Zhang <keto.zhang@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
pyjwt = "^2.4.0"
pyyaml = "^5.3"
flask-wtf = "^0.14.2"
requests = "^2.22.0"
pymysql = "^0.9.3"
cryptography = "^2.8"
apispec = "^3.2.0"
apispec-webframeworks = "^0.5.2"
astropy = "^4.0"
simplejson = "^3.17.0"
pandas = "^0.25.3"
webargs = "^5.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
